libsel4debug: Define x86 registers by sel4_arch instead of arch

--- a/libsel4debug/Makefile
+++ b/libsel4debug/Makefile
@@ -22,5 +22,6 @@ ASMFILES := $(patsubst $(SOURCE_DIR)/%,%,$(wildcard ${SOURCE_DIR}/src/arch/$(ARC
 HDRFILES := \
     $(wildcard ${SOURCE_DIR}/include/*)
 HDRFILES += $(wildcard ${SOURCE_DIR}/arch_include/$(ARCH)/*)
+HDRFILES += $(wildcard ${SOURCE_DIR}/sel4_arch_include/$(SEL4_ARCH)/*)
 
 include $(SEL4_COMMON)/common.mk
