libsel4vmm: Allocate device memory from allocman for guest memory

--- a/libsel4vmm/Kbuild
+++ b/libsel4vmm/Kbuild
@@ -9,4 +9,4 @@
 #
 
 libs-$(CONFIG_LIB_SEL4_VMM) += libsel4vmm
-libsel4vmm: $(libc) common libpci libsel4 libsel4vka libelf libsel4platsupport libcpio libsel4allocman libsel4vspace libsel4utils libethdrivers
+libsel4vmm: $(libc) common libpci libsel4 libsel4vka libelf libsel4platsupport libcpio libsel4allocman libsel4vspace libsel4utils libethdrivers libsel4allocman
